# Research_Assistant_CrewAI

./: .gitignore  README.md  exa_answer.json  main.py  pyproject.toml  requirements.txt  template.py
experiment/: research_report.md  run.py
output/: research_report.md
src/: crew.py
src/UI/: sidebar.py
src/agenets/: agent.py
src/llms/: init_llms.py
src/tasks/: task.py
src/tools/: custom_tool.py
src/utils/: output_handler.py
