[project]
name = "research_assistant"
version = "0.1.0"
description = "Research Assistant"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "crewai",
    "crewai-tools",
    "streamlit",
    "exa-py",
    "requests",
    "python-dotenv"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
